feat: Add language switcher component and improve layout styles for better responsiveness, add fully arabic support for all components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,7 @@
 <div class="content">
   <main>
     <router-outlet></router-outlet>
+    <app-language-switcher-component></app-language-switcher-component>
     <app-scroll-to-top></app-scroll-to-top>
   </main>
 </div>
