--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -3,7 +3,7 @@
 }
 
 .content-area {
-  margin-left: 220px; /* Sidebar width */
+  margin-inline-start: 220px;
   padding: 20px;
   flex-grow: 1;
 }
