--- a/src/app/components/dashboard/register-user/register-user.component.html
+++ b/src/app/components/dashboard/register-user/register-user.component.html
@@ -1,8 +1,9 @@
 <div class="auth-form-container">
   <form class="auth-form" [formGroup]="addUserForm" (ngSubmit)="onSubmit()">
-    <h2>Add A User</h2>
     <div class="form-group">
-      <label for="firstName">First Name</label>
+      <label for="firstName">
+        {{ "DASHBOARD.SECTIONS.TABLE_HEADERS.FIRST_NAME" | translate }}
+      </label>
       <input type="text" id="firstName" formControlName="firstName" />
       <div
         class="error-message"
@@ -12,16 +13,34 @@
         "
       >
         <small *ngIf="addUserForm.get('firstName')?.errors?.['required']">
-          First Name is required.
+          {{
+            "AUTH.ERROR_MESSAGES.NAME_REQUIRED"
+              | translate
+                : {
+                    type:
+                      ("DASHBOARD.SECTIONS.TABLE_HEADERS.FIRST_NAME"
+                      | translate)
+                  }
+          }}
         </small>
         <small *ngIf="addUserForm.get('firstName')?.errors?.['minlength']">
-          First Name must be at least 3 characters long.
+          {{
+            "AUTH.ERROR_MESSAGES.NAME_MIN_LENGTH"
+              | translate
+                : {
+                    type:
+                      ("DASHBOARD.SECTIONS.TABLE_HEADERS.FIRST_NAME"
+                      | translate)
+                  }
+          }}
         </small>
       </div>
     </div>
 
     <div class="form-group">
-      <label for="lastName">Last Name</label>
+      <label for="lastName">
+        {{ "DASHBOARD.SECTIONS.TABLE_HEADERS.LAST_NAME" | translate }}
+      </label>
       <input type="text" id="lastName" formControlName="lastName" />
       <div
         class="error-message"
@@ -31,16 +50,32 @@
         "
       >
         <small *ngIf="addUserForm.get('lastName')?.errors?.['required']">
-          Last Name is required.
+          {{
+            "AUTH.ERROR_MESSAGES.NAME_REQUIRED"
+              | translate
+                : {
+                    type:
+                      ("DASHBOARD.SECTIONS.TABLE_HEADERS.LAST_NAME" | translate)
+                  }
+          }}
         </small>
         <small *ngIf="addUserForm.get('lastName')?.errors?.['minlength']">
-          Last Name must be at least 3 characters long.
+          {{
+            "AUTH.ERROR_MESSAGES.NAME_MIN_LENGTH"
+              | translate
+                : {
+                    type:
+                      ("DASHBOARD.SECTIONS.TABLE_HEADERS.LAST_NAME" | translate)
+                  }
+          }}
         </small>
       </div>
     </div>
 
     <div class="form-group">
-      <label for="username">Username</label>
+      <label for="username">
+        {{ "DASHBOARD.SECTIONS.TABLE_HEADERS.USERNAME" | translate }}
+      </label>
       <input type="text" id="username" formControlName="username" />
       <div
         class="error-message"
@@ -50,16 +85,32 @@
         "
       >
         <small *ngIf="addUserForm.get('username')?.errors?.['required']">
-          Username is required.
+          {{
+            "AUTH.ERROR_MESSAGES.NAME_REQUIRED"
+              | translate
+                : {
+                    type:
+                      ("DASHBOARD.SECTIONS.TABLE_HEADERS.USERNAME" | translate)
+                  }
+          }}
         </small>
         <small *ngIf="addUserForm.get('username')?.errors?.['minlength']">
-          Username must be at least 3 characters long.
+          {{
+            "AUTH.ERROR_MESSAGES.NAME_MIN_LENGTH"
+              | translate
+                : {
+                    type:
+                      ("DASHBOARD.SECTIONS.TABLE_HEADERS.USERNAME" | translate)
+                  }
+          }}
         </small>
       </div>
     </div>
 
     <div class="form-group">
-      <label for="email">Email</label>
+      <label for="email">
+        {{ "DASHBOARD.SECTIONS.TABLE_HEADERS.EMAIL" | translate }}
+      </label>
       <input type="email" id="email" formControlName="email" />
       <div
         class="error-message"
@@ -68,22 +119,47 @@
         "
       >
         <small *ngIf="addUserForm.get('email')?.errors?.['required']">
-          Email is required.
+          {{
+            "AUTH.ERROR_MESSAGES.NAME_REQUIRED"
+              | translate
+                : {
+                    type: ("DASHBOARD.SECTIONS.TABLE_HEADERS.EMAIL" | translate)
+                  }
+          }}
         </small>
         <small *ngIf="addUserForm.get('email')?.errors?.['email']">
-          Invalid email address. Example: example&#64;domain.com
+          {{
+            "AUTH.ERROR_MESSAGES.EMAIL_PATTERN"
+              | translate
+                : {
+                    type: ("DASHBOARD.SECTIONS.TABLE_HEADERS.EMAIL" | translate)
+                  }
+          }}
         </small>
       </div>
     </div>
 
     <div class="form-group">
-      <label for="role">Role</label>
-      <select id="role" formControlName="role">
-        <option value="" disabled selected>Select a role</option>
-        <option value="Reader">Reader</option>
-        <option value="Author">Writer</option>
-        <option value="Admin">Admin</option>
-      </select>
+      <label for="role">
+        {{ "DASHBOARD.SECTIONS.TABLE_HEADERS.ROLE" | translate }}
+      </label>
+      <div class="select-container">
+        <select id="role" formControlName="role">
+          <option value="" disabled selected>
+            {{ "USER_PROFILE.ROLES.SELECT" | translate }}
+          </option>
+          <option value="Reader">
+            {{ "USER_PROFILE.ROLES.READER" | translate }}
+          </option>
+          <option value="Writer">
+            {{ "USER_PROFILE.ROLES.WRITER" | translate }}
+          </option>
+          <option value="Admin">
+            {{ "USER_PROFILE.ROLES.ADMIN" | translate }}
+          </option>
+        </select>
+      </div>
+
       <div
         class="error-message"
         *ngIf="
@@ -91,13 +167,13 @@
         "
       >
         <small *ngIf="addUserForm.get('role')?.errors?.['required']">
-          Role is required.
+          {{ "AUTH.ERROR_MESSAGES.REUIRED" | translate }}
         </small>
       </div>
     </div>
 
     <div class="form-group">
-      <label for="password">Password</label>
+      <label for="password">{{ "AUTH.PASSWORD" | translate }}</label>
       <div class="password-container">
         <input
           [type]="showPassword ? 'text' : 'password'"
@@ -121,20 +197,21 @@
         "
       >
         <small *ngIf="addUserForm.get('password')?.errors?.['required']">
-          Password is required.
+          {{ "PASSWORD_ERRORS.REQUIRED" | translate }}
         </small>
         <small *ngIf="addUserForm.get('password')?.errors?.['minlength']">
-          Password must be at least 8 characters long.
+          {{ "PASSWORD_ERRORS.MIN_LENGTH" | translate }}
         </small>
         <small *ngIf="addUserForm.get('password')?.errors?.['pattern']">
-          Password must contain at least 1 uppercase letter, 1 lowercase letter,
-          1 number, and 1 special character.
+          {{ "PASSWORD_ERRORS.PATTERN" | translate }}
         </small>
       </div>
     </div>
 
     <div class="form-group">
-      <label for="confirmPassword">Confirm Password</label>
+      <label for="confirmPassword">
+        {{ "AUTH.CONFIRM_PASSWORD" | translate }}
+      </label>
       <div class="password-container">
         <input
           [type]="showConfirmNewPassword ? 'text' : 'password'"
@@ -162,22 +239,21 @@
         "
       >
         <small *ngIf="addUserForm.get('confirmPassword')?.errors?.['required']">
-          Confirm Password is required.
+          {{ "PASSWORD_ERRORS.REQUIRED" | translate }}
         </small>
         <small
           *ngIf="addUserForm.get('confirmPassword')?.errors?.['passwordMismatch']"
         >
-          Passwords do not match.
+          {{ "PASSWORD_ERRORS.PASSWORD_MISMATCH" | translate }}
         </small>
       </div>
     </div>
 
     <button type="submit" class="btn-submit" [disabled]="addUserForm.invalid">
-      Register
+      {{ "AUTH.REGISTER" | translate }}
     </button>
   </form>
   <div *ngIf="isLoading" class="spinner-overlay">
     <div class="spinner"></div>
-    <p>Loading...</p>
   </div>
 </div>
