--- a/src/app/components/user-profile/user-profile.component.html
+++ b/src/app/components/user-profile/user-profile.component.html
@@ -16,7 +16,7 @@
     </p>
     <p>
       <strong>{{ "USER_PROFILE.ROLE" | translate }}:</strong>
-      {{ userProfile.role }}
+      {{ "USER_PROFILE.ROLES." + userProfile.role.toUpperCase() | translate }}
     </p>
 
     <div
