--- a/src/app/components/dashboard/main-view/main-view.component.scss
+++ b/src/app/components/dashboard/main-view/main-view.component.scss
@@ -38,6 +38,7 @@
     h3 {
       font-size: 1.5rem;
       margin-bottom: 1rem;
+      text-align: center;
     }
 
     .dashboard-table {
@@ -48,7 +49,7 @@
       td {
         border: 1px solid #ddd;
         padding: 10px;
-        text-align: left;
+        text-align: start;
       }
       th {
         background-color: #f4f4f4;
@@ -57,11 +58,11 @@
       a {
         color: #007bff;
         text-decoration: none;
+        transition: 0.3s;
         &:hover {
-          text-decoration: underline;
+          color: #0056b3;
         }
       }
     }
-
   }
 }
