--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -39,56 +39,6 @@ header {
   }
 }
 
-.language-switcher {
-  button {
-    background-color: transparent;
-    border: 2px solid #007bff;
-    border-radius: 5px;
-    font-size: 16px;
-    cursor: pointer;
-    margin-right: 10px;
-    padding: 5px 10px;
-    color: #007bff;
-    transition: all 0.3s ease-in-out;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    position: relative;
-    overflow: hidden;
-
-    &:hover,
-    &.active {
-      background-color: #007bff;
-      color: #fff;
-      box-shadow: 0 6px 8px rgba(0, 0, 0, 0.15);
-    }
-
-    &::before {
-      content: "";
-      position: absolute;
-      top: 0;
-      left: -100%;
-      width: 200%;
-      height: 100%;
-      background: linear-gradient(
-        120deg,
-        transparent,
-        rgba(255, 255, 255, 0.4),
-        transparent
-      );
-      transition: all 0.5s ease;
-    }
-
-    &:hover::before {
-      left: 100%;
-    }
-
-    &.active {
-      font-weight: bold;
-      background-color: #007bff;
-      color: #fff;
-    }
-  }
-}
-
 .rotate {
   transform: rotate(180deg);
   transition: transform 0.3s;
@@ -116,6 +66,7 @@ header {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   z-index: 1;
   flex-direction: column;
+  inset-inline-end: 0;
 
   a {
     color: #333;
@@ -135,14 +86,6 @@ header {
     display: flex;
   }
 }
-.align-left {
-  right: 0;
-}
-
-.align-right {
-  left: 0;
-}
-
 @media (max-width: 792px) {
   header {
     height: 5vh;
